<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context="com.easycoinbudget.Fragments.SavingsFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_add_32"
                android:id="@+id/imageView2"/>

            <TextView
                android:text="@string/savings_add_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/tvEstimatedEntryTitle"
                android:textSize="18sp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:padding="16dp">

                    <TextView
                        android:text="@string/savings_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textAlignment="viewStart" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="$ 0.00"
                        android:inputType="number"
                        android:singleLine="true"
                        android:id="@+id/inputSavingsGoalTitle"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:padding="16dp">

                    <TextView
                        android:text="@string/savings_goal_amount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textAlignment="viewStart"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="$0.00"
                        android:inputType="number"
                        android:id="@+id/inputSavingsGoalAmount"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="2"
                    android:padding="16dp">

                    <TextView
                        android:text="@string/savings_goal_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textAlignment="viewStart"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:id="@+id/inputSavingsGoalDate"
                        android:layout_weight="1"
                        android:hint="dd-mm-yyyy"
                        android:clickable="true"
                        android:focusable="false"/>

                </LinearLayout>

                <Button
                    android:text="@string/button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_AddSavingEntry"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center"
                    android:background="@color/color"
                    android:textColor="@color/white"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_Savingincome_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>
</FrameLayout>
