<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:padding="8dp"
    tools:context="com.easycoinbudget.Fragments.FragmentTranscationEntry">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="RtlCompat">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_add_32"
            android:id="@+id/imageView2"/>

        <TextView
            android:text="Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvRecurringEntryTitle"
            android:textSize="18sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlCompat">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
              android:layout_margin="8dp">

                <TextView
                    android:text="@string/recurring_expense_entry_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="$ 0.00"
                    android:inputType="number"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:id="@+id/inputRecurringTransactionExpenseEntryAmount"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_margin="8dp">

                <TextView
                    android:text="@string/recurring_expense_entry_frequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart"/>

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinRecurringExpenseTransacEntryFrequency"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="textEnd"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
          android:layout_margin="8dp">

                <TextView
                    android:text="@string/recurring_expense_entry_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart"/>

                <EditText
                    android:id="@+id/inputRecExpenseTransacEntryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="dd-mm-yyyy"
                    android:inputType="date"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="2"
                android:layout_margin="8dp">

                <TextView
                    android:text="@string/recurring_expense_entry_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textAlignment="viewStart"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Some words..."
                    android:singleLine="true"
                    android:id="@+id/inputRecExpenseTransactionEntryDescription"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:text="@string/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnAddRecuringTransactionExpenseEntry"
                android:layout_weight="1"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="center"
                android:background="@color/color"
                android:textColor="@color/white"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

</FrameLayout>
